v1.0.0/modules/schema/pages/class/Ratio.adoc
= `Ratio`
:toclevels: 4


+++Fraction specified explicitly with a numerator and denominator, which can be used to calculate the quotient.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Ratio`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`Ratio`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<denominator,`denominator`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++The part of a fraction that is below the line and that functions as the divisor of the numerator.+++

| <<numerator,`numerator`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++The part of a fraction that is above the line and signifies the number to be divided by the denominator.+++
|===

'''


//[discrete]
[#denominator]
=== `denominator`
+++The part of a fraction that is below the line and that functions as the divisor of the numerator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Ratio.denominator`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#numerator]
=== `numerator`
+++The part of a fraction that is above the line and signifies the number to be divided by the denominator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Ratio.numerator`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===


